# Game2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/Shaders/: AnimatedSprite.frag  AnimatedSprite.vert  ColoredSprite.frag  ColoredSprite.vert  Default.frag  Default.vert  DefaultSprite.frag  TexturedSprite.frag
src/: Setup.hpp  main.cpp
src/Core/: AllComponents.hpp  ComponentBase.hpp  Debug.cpp  Debug.hpp  Entity.hpp  Entity.tpp  EventHandler.cpp  EventHandler.hpp  EventSystem.cpp  EventSystem.hpp  Events.hpp  Game.cpp  Game.hpp  Window.cpp  Window.hpp
src/Game/: Input.cpp  Input.hpp  Player.cpp  Player.hpp  Scene.cpp  Scene.hpp
src/Physics/: Collider.cpp  Collider.hpp  ColliderComponents.cpp  ColliderComponents.hpp  Physics.cpp  Physics.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  RigidbodyComponent.cpp  RigidbodyComponent.hpp  TransformComponent.cpp  TransformComponent.hpp  VectorMath.hpp
src/Player/: Camera.cpp  Camera.hpp  CameraComponent.hpp  InputSystem.cpp  InputSystem.hpp  PlayerComponent.cpp  PlayerComponent.hpp
src/Rendering/: Buffers.hpp  DataStructures.hpp  OutlineComponent.hpp  RenderSystem.cpp  RenderSystem.hpp  Renderer.cpp  Renderer.hpp  ResourceManager.cpp  ResourceManager.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp  SpriteComponent.cpp  SpriteComponent.hpp  SpriteComponents.hpp  Texture.cpp  Texture.hpp  Utils.hpp  VAO.cpp  VAO.hpp
src/UI/: UI.cpp  UI.hpp
src/Utils/: !Remember.txt  Enum.hpp  FileReader.cpp  FileReader.hpp  FlagParser.cpp  FlagParser.hpp  Hash.hpp  Logger.cpp  Logger.hpp  Math.cpp  Math.hpp  MathConstants.hpp  String.hpp  Type.hpp
test/: FlagParser.cpp  Math.cpp  String.cpp  TestSetup.hpp
